add or cancel ingredient use case to app builder, more error message on valid input date